[package]
name = "axio-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axio = { git = "https://github.com/loonglord/axio", branch = "main" }
axum = "0.8.8"
redis = "1.0.3"
serde = "1.0.228"
sqlx = "0.8.6"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tower = "0.5.3"
validator = "0.20.0"
